--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,7 +17,9 @@ pipeline {
         }
         stage ('Report'){
             agent{
-                docker{ image 'maven:3-alpine' }
+                docker{ 
+                    image 'maven:3-alpine'
+                }
             }
             steps {
                 allure includeProperties: false, jdk: '', results: [[path: 'allure-results']]
